Finished gradient editor
