# Node-Backend/src/Types/GradientInformation.ts
@@ -1,5 +1,12 @@
 import { GradientOptions } from 'audiomotion-analyzer'
 
-export interface GradientInformation extends GradientOptions {
+type ColorStop = {
+  pos: number
+  color: string
+}
+
+export interface GradientInformation
+  extends Omit<GradientOptions, 'colorStops'> {
+  colorStops: ColorStop[]
   name: string
 }
